--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"author": "Hector Rincon",
 	"license": "ISC",
 	"devDependencies": {
+		"@parcel/transformer-sass": "^2.12.0",
 		"parcel": "^2.12.0"
 	}
 }
